Added deny-drops to config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,6 +19,9 @@ disabled-worlds:
 keep-inventory: true
 keep-exp: true
 
+# Deny item and exp drops?
+deny-drops: true
+
 # Rewards given to player upon death
 rewards:
   inform:
